[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "agentflow-ai"
version = "1.0.9"
description = "Minimalist Python framework for building AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hamadi Chaabani"}
]
keywords = ["ai", "agents", "llm", "ollama", "openai", "mistral", "mcp", "testing", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
[project.urls]
Homepage = "https://github.com/ia-nova-labs/agentflow"
Source = "https://github.com/ia-nova-labs/agentflow"
Issues = "https://github.com/ia-nova-labs/agentflow/issues"
Documentation = "https://github.com/ia-nova-labs/agentflow"
